[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyResBench"
version = "0.1.0"
description = "System benchmark by actually training a small ResNet for a few epochs."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
  "rich>=13.7.0",
  "psutil>=5.9.0",
  "pynvml>=11.5.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
]

[project.scripts]
PyResBench = "PyResBench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mlsysbench" = ["PyResBench.txt"]

